# dbus-config-manag

./: CMakeLists.txt  Constants.h  README.md
app/: CMakeLists.txt  main.cpp
app/include/: Application.h
app/src/: Application.cpp
server/: CMakeLists.txt  main.cpp
server/include/: ConfigManager.h  ConfigObject.h
server/src/: ConfigManager.cpp  ConfigObject.cpp
src/: ConfigManager.cpp
